fix: text overflow in ResourceListItem.tsx

--- a/packages/amplication-client/src/Components/EllipsisText.scss
+++ b/packages/amplication-client/src/Components/EllipsisText.scss
@@ -2,12 +2,15 @@
 
 .ellipsis {
   &__button {
+    position: relative;
+    z-index: auto;
     background-color: transparent;
     border: none;
     text-decoration: none;
     font-weight: bolder;
     padding: 0;
     color: var(--black60);
+
     &:hover {
       color: var(--primary);
       cursor: pointer;
